--- a/app/views/layouts/_cards.html.erb
+++ b/app/views/layouts/_cards.html.erb
@@ -18,7 +18,7 @@
             </div>
           </div>
           <!-- Description -->
-          <p class="card-text"><%= truncate(item.description, :length => 150) %></p>
+          <p class="card-text text-center"><%= truncate(item.description, :length => 150) %></p>
           <!-- Price -->
           <p class="card-text h4 text-center text-primary"><%= item.price %>€</p>
         </div>
